<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="activated">Activated</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="android_beam_enable_confirm_message">This requires Android Beam enable in your device settings.Do you want to enable it?</string>
    <string name="apikey">AIzaSyCqb3hZ_jFmPQ9qrortkXQWBY4BnNWF95w</string>
    <string name="app_header_barclay">Banking Demo</string>
    <string name="app_header_crbtreports">CRBT Reports</string>
    <string name="app_header_glu">Hola!</string>
    <string name="app_header_mtn">MyWorld</string>
    <string name="app_header_mtng">My World</string>
    <string name="app_header_mtnprepaid">MyWorld Prepaid</string>
    <string name="app_header_orange">Orange Internet</string>
    <string name="app_header_title_admincapturecontest">Admin CC</string>
    <string name="app_header_title_agcpwdev">My ID Dev2.4 Agile</string>
    <string name="app_header_title_agentapp">agentAPP</string>
    <string name="app_header_title_agentappghdev">AgentApp</string>
    <string name="app_header_title_agentappugdev">Agent App Dev</string>
    <string name="app_header_title_agentdev">Agent Test</string>
    <string name="app_header_title_agentsadev">SA Agent App Dev</string>
    <string name="app_header_title_agentsapreprod">SA Agent Preprod</string>
    <string name="app_header_title_agentsasit">SA Agent App SIT</string>
    <string name="app_header_title_agentswdev">MoMo Agent Sw Dev</string>
    <string name="app_header_title_agentug">MoMo Agent</string>
    <string name="app_header_title_agentugv2">AgentApp_Demo</string>
    <string name="app_header_title_agentzmdev">MoMo Agent Zm Dev</string>
    <string name="app_header_title_aircel">Aircel</string>
    <string name="app_header_title_airteldth">Airtel DTH</string>
    <string name="app_header_title_airtelht">hellotunes</string>
    <string name="app_header_title_airtelpacs">Airtel SC</string>
    <string name="app_header_title_airtelsc">Airtel Genie</string>
    <string name="app_header_title_airtelselfcareapp">myAirtel</string>
    <string name="app_header_title_airtelsrilanka">My Airtel App</string>
    <string name="app_header_title_airtelvvm">Airtel VVM</string>
    <string name="app_header_title_armanitestapp">VTB Bank</string>
    <string name="app_header_title_asia_hawala">AsiaHawala</string>
    <string name="app_header_title_asiahawala">AsiaHawala_dev</string>
    <string name="app_header_title_asiahawala2">AsiaHawala_pvg</string>
    <string name="app_header_title_asiahawala3">AsiaHawala</string>
    <string name="app_header_title_asiahawala4">mobiquity Money</string>
    <string name="app_header_title_asiahawala5">asiaHawala</string>
    <string name="app_header_title_banglalink1">BanglaLink-Pretups</string>
    <string name="app_header_title_banglalink2">BanglaLink-Pretups</string>
    <string name="app_header_title_bizcart">BizCart</string>
    <string name="app_header_title_business5">Econet5B</string>
    <string name="app_header_title_business5pvg">EconetPVG5B</string>
    <string name="app_header_title_businessuat5">businessUAT5</string>
    <string name="app_header_title_bustracker">Bus Tracker</string>
    <string name="app_header_title_cbanking">cBanking</string>
    <string name="app_header_title_cbwidgeconsumerdev">Widge Dev</string>
    <string name="app_header_title_cedpcvs">CEDP</string>
    <string name="app_header_title_clicknpay">ClickNPay</string>
    <string name="app_header_title_clmlite">CLMLite App</string>
    <string name="app_header_title_clmlitedev">CLMLite App</string>
    <string name="app_header_title_cloudcpw">Cloud iD5</string>
    <string name="app_header_title_comviva">My Comviva Demo</string>
    <string name="app_header_title_consumerapp">Zerch</string>
    <string name="app_header_title_consumerapp_dev">Zerch Dev</string>
    <string name="app_header_title_consumerappdemo">Consumer App</string>
    <string name="app_header_title_consumercdi">MoMo App CDI</string>
    <string name="app_header_title_consumerdev">Consumer Test</string>
    <string name="app_header_title_consumerug">Consumer UG</string>
    <string name="app_header_title_consumerugdev">MTN MoMo UG</string>
    <string name="app_header_title_cpw">My ID SIT5</string>
    <string name="app_header_title_cpw_play">iD Mobile</string>
    <string name="app_header_title_cpwcit">My ID CIT5</string>
    <string name="app_header_title_cpwcit1">My iD UAT1</string>
    <string name="app_header_title_cpwdev">Selfcare Dev</string>
    <string name="app_header_title_cpwdev2">My ID Dev2.4</string>
    <string name="app_header_title_cpwselfcare">CPW Selfcare</string>
    <string name="app_header_title_cpwuat">My ID UAT5</string>
    <string name="app_header_title_dealer">Irancell Dealer UAT</string>
    <string name="app_header_title_dealerbeta">MTN Irancell</string>
    <string name="app_header_title_demo1">Demo1</string>
    <string name="app_header_title_demo2">My Retailers</string>
    <string name="app_header_title_dmydiary">my Diary</string>
    <string name="app_header_title_docomo">Docomo</string>
    <string name="app_header_title_dvodacom">Vodacom</string>
    <string name="app_header_title_ecoburundidev">EcoKash</string>
    <string name="app_header_title_ecoburunditest">ECOBURUNDITEST</string>
    <string name="app_header_title_ecoburundiuat">EcoKash UAT</string>
    <string name="app_header_title_ecocashtest">EcoCash test</string>
    <string name="app_header_title_econetprod">Ecocash</string>
    <string name="app_header_title_ecoprodnew">EcoCash Mobile Business Wallet</string>
    <string name="app_header_title_ecoprodnewdev">Mobile Business Wallet</string>
    <string name="app_header_title_ecosubs">Econet Local</string>
    <string name="app_header_title_ecosubsuat">Ecocash UAT</string>
    <string name="app_header_title_entcom">e-admin</string>
    <string name="app_header_title_etisalat">Etisalat MMG</string>
    <string name="app_header_title_evangelist">Data Buddy</string>
    <string name="app_header_title_evangelistdemo">NetGuy</string>
    <string name="app_header_title_evangelisttest">Evangelist</string>
    <string name="app_header_title_fdc">FDC</string>
    <string name="app_header_title_fdpg">FDPG</string>
    <string name="app_header_title_fdpos">i.pos</string>
    <string name="app_header_title_genericairtelht">cCRBT</string>
    <string name="app_header_title_geocell">Geocell</string>
    <string name="app_header_title_gnoc">Eagle NMS</string>
    <string name="app_header_title_grameen">Grameen</string>
    <string name="app_header_title_hellotunes">Hello Tunes Demo</string>
    <string name="app_header_title_hic">hic</string>
    <string name="app_header_title_hiddenpogo">Pogo</string>
    <string name="app_header_title_holatest">Hola Test</string>
    <string name="app_header_title_htdemo">HT Demo</string>
    <string name="app_header_title_ibsdemo">selfcaredemo</string>
    <string name="app_header_title_icicipru">I Pos</string>
    <string name="app_header_title_infotainmentlive1">Infotainment Live 1</string>
    <string name="app_header_title_infotainmentlive2">Infotainment Live 2</string>
    <string name="app_header_title_ipos">i.pos</string>
    <string name="app_header_title_irancelldealer">Irancell Dealer</string>
    <string name="app_header_title_irancelldealerbeta">Irancell Dealer Beta</string>
    <string name="app_header_title_iris">Iris</string>
    <string name="app_header_title_irisapp">IRIS</string>
    <string name="app_header_title_irisussd">RetailerIRIS</string>
    <string name="app_header_title_itspp">ITS Passport Demo</string>
    <string name="app_header_title_jiomoney">Jio Money</string>
    <string name="app_header_title_jlt">Jesst</string>
    <string name="app_header_title_kcell">Kcell</string>
    <string name="app_header_title_kee">KEE</string>
    <string name="app_header_title_kidszone">Kids Zone</string>
    <string name="app_header_title_kidszone1">Kids Zone</string>
    <string name="app_header_title_kidszonetest">Kids Zone Test</string>
    <string name="app_header_title_laundry">Laundry</string>
    <string name="app_header_title_laundryapp">TheLaundryApp</string>
    <string name="app_header_title_lavida">La Vida</string>
    <string name="app_header_title_lmsmerchant">LMS Merchant App</string>
    <string name="app_header_title_magent">Mobiquity Merchant</string>
    <string name="app_header_title_mcc">Consumer</string>
    <string name="app_header_title_mcod">mcod</string>
    <string name="app_header_title_mcr">Agent</string>
    <string name="app_header_title_merchantapp">Merchant App</string>
    <string name="description_info">Capture</string>
    <string name="label1">Please take a photo,with your face fitting in the space below.</string>
    <string name="msg_condesc_cancel">Close Scanner View</string>
    <string name="msg_condesc_flash">Flash button</string>
    <string name="msg_condesc_picker">Picker to fetch Image from Gallery</string>
    <string name="msg_default_status">Place QR or Bar code inside viewfinder to scan</string>
    <string name="msg_default_title">Scanner</string>
    <string name="recording">Recording</string>
</resources>