<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <SurfaceView
        android:id="@+id/preview_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <com.google.zxing.client.android.ViewfinderView
        android:id="@+id/viewfinder_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:layout_gravity="top|center_horizontal"
        android:orientation="vertical"
        android:id="@+id/title_parent_layout"
        android:background="@color/transparent"
        android:paddingLeft="5dp"
        android:paddingTop="20dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_gravity="top|center_horizontal"
            android:id="@+id/title_layout"
            android:background="@color/transparent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/cancel"
                android:background="@color/transparent"
                android:padding="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cancel"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/msg_condesc_cancel"/>
            <ImageView
                android:id="@+id/picker"
                android:background="@color/transparent"
                android:paddingLeft="4dp"
                android:paddingTop="2dp"
                android:paddingRight="2dp"
                android:paddingBottom="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/picker"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/msg_condesc_picker"/>
            <ImageView
                android:id="@+id/flash"
                android:background="@color/transparent"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                android:paddingRight="4dp"
                android:paddingBottom="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/flash_off"
                android:layout_toLeftOf="@+id/picker"
                android:contentDescription="@string/msg_condesc_flash"/>
        </RelativeLayout>
        <TextView
            android:textSize="22sp"
            android:textColor="@color/status_text"
            android:layout_gravity="center"
            android:id="@+id/title_view"
            android:background="@color/transparent"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_default_title"/>
    </LinearLayout>
    <TextView
        android:textSize="22sp"
        android:textColor="@color/status_text"
        android:layout_gravity="bottom|center_horizontal"
        android:id="@+id/status_view"
        android:background="@color/transparent"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_default_status"/>
</merge>
