<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/label_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentTop="true">
        <TextView
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:id="@+id/label1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/label1"/>
        <TextView
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:id="@+id/label2"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:id="@+id/label3"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/cam_layout"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/label_layout">
        <RelativeLayout
            android:layout_gravity="center"
            android:id="@+id/cam_layout1"
            android:background="@drawable/corner_drawable"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.comviva.webaxn.p002ui.AutoFitTextureView
                android:id="@+id/texture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/recording_status"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="2dp"
        android:layout_above="@+id/click_layout"
        android:layout_below="@+id/cam_layout">
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/recording_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/recording_status_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/timer_image"/>
            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recording"/>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/click_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true">
        <ImageButton
            android:layout_gravity="center"
            android:id="@+id/capture"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/description_info"/>
    </FrameLayout>
</RelativeLayout>
